--- a/sns-init.yaml
+++ b/sns-init.yaml
@@ -133,8 +133,8 @@ Swap:
     - ZW  # Zimbabwe
 
   VestingSchedule:
-    events: 5                 # 5 neurons
-    interval: 6 months        # 0, 6, 12, 18, 24 months
+    events: 6                 # 6 neurons
+    interval: 3 months        # 0, 3, 6, 9, 12, 15 months
 
   # start_time: 12:00 UTC    
   
